--- a/package.json
+++ b/package.json
@@ -14,23 +14,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "express-rate-limit": "^7.5.0",
-    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "tsx": "^4.19.2",
-    "zod": "^3.25.57"
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
-    "@types/express-rate-limit": "^5.1.3",
-    "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.9.1",
     "copyfiles": "^2.4.1",
