--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "src/server.ts",
   "type": "module",
   "scripts": {
-    "dev": "SET NODE_ENV=development && tsx --watch src/server.ts",
-    "test": "SET NODE_ENV=development && tsx src/test/index.test.ts",
+    "dev": "NODE_ENV=development && tsx --watch src/server.ts",
+    "test": "NODE_ENV=development && tsx src/test/index.test.ts",
     "copy-data": "copyfiles -u 2 src/data/*.json build/data/",
-    "build": "SET NODE_ENV=production && npx tsc && npm run copy-data",
+    "build": "NODE_ENV=production && npx tsc && npm run copy-data",
     "start": "node build/server.js"
   },
   "keywords": [],
