--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "main": "src/server.ts",
   "type": "module",
   "scripts": {
-    "dev": "SET NODE_ENV=development && tsx --watch src/server.ts",
-    "test": "SET NODE_ENV=development && tsx src/test/index.test.ts",
-    "copy-data": "copyfiles -u 2 src/data/*.json build/data/",
-    "build": "SET NODE_ENV=production && npx tsc && npm run copy-data",
-    "start": "node build/server.js"
+    "dev": "tsx --watch src/server.ts",
+    "test": "tsx src/test/index.test.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +14,6 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "compression": "^1.8.0",
-    "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.1",
