--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "src/server.ts",
   "type": "module",
   "scripts": {
-    "dev": "tsx --watch src/server.ts",
-    "test": "tsx src/test/index.test.ts"
+    "copy-data": "copyfiles -u 2 src/data/*.json build/data/",
+    "build": "npx tsc && npm run copy-data",
+    "start": "node build/server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "compression": "^1.8.0",
+    "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.1",
